changes done in action file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
           out: 'reports' # this is the default, no need to specify unless you wish to override it
           args: >
             --enableRetired
+            --disableYarnAudit
+            --disableNodeAudit
       - name: Upload Test results
         uses: actions/upload-artifact@master
         with:
